# tech-blog-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  Tech-Blog-AI-PRD.docx  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.claude/: settings.json
app/: __init__.py  config.py  main.py
app/agents/: blog_agent.py
app/api/: __init__.py  auth.py  deps.py  draft.py  explain.py  knowledge.py  outline.py  research.py  seo.py  workflow.py
app/db/: __init__.py  chroma.py  postgres.py  redis.py  repositories.py
app/mcp/: __init__.py
app/models/: __init__.py  requests.py  responses.py
app/prompts/: __init__.py  draft.py  explain.py  outline.py  seo.py
app/services/: __init__.py  auth_service.py  content_service.py  llm_service.py  rag_service.py  research_service.py
generated_blogs/: oops_concepts.json  oops_concepts.md
tests/: conftest.py
tests/test_agents/: __init__.py
tests/test_api/: test_explain.py  test_health.py  test_outline.py  test_research.py
